--- a/pages/mqtt.html
+++ b/pages/mqtt.html
@@ -27,7 +27,7 @@
 		<div class="home_btn">
 			<form name="home" action="/" method="get">
                 <a  href="autentica.html">
-					
+
 			    <img src="/imagens/blue/gear_btn.png"  ALT=""></a>
 			</form>
 		</div>
@@ -185,10 +185,10 @@ var countDownDate = new Date("Jun 27, 2022 15:37:25").getTime();
 
 
 
-fs.writeFile('myfile.txt', 'Hello content!', function (err) {
-	if (err) throw err;
-	console.log('Saved!');
-  });
+// fs.writeFile('myfile.txt', 'Hello content!', function (err) {
+// 	if (err) throw err;
+// 	console.log('Saved!');
+//   });
 
 async function mqtt_show() {
 	const options = {method: 'GET',	mode: 'cors',cache: 'default'}
