--- a/pages/Monitor.html
+++ b/pages/Monitor.html
@@ -204,7 +204,7 @@ async function getContent() {
 async function cad_new_temp(){
 
 const options = {method: 'GET',	mode: 'cors',cache: 'default'}
-fetch('https://repo1-iota.vercel.app/mqtt/mqtt')
+fetch('https://repo1-iota.vercel.app/mqtt')
 //fetch('http://127.0.0.1:8081/mqtt')
 .then(function (response){
 return response.text()})
