--- a/pages/index.html
+++ b/pages/index.html
@@ -55,22 +55,8 @@ google.charts.setOnLoadCallback(draw_table);
 	
 <section class="chart">
 	<form action="">
-	<select name="grafico" id="grafico">
-		<option value="janeiro">Janeiro</option>
-		<option value="fevereiro">Fevereiro</option>
-		<option value="março">Março</option>
-		<option value="abril">Abril</option>
-		<option value="maio">Maio</option>
-		<option value="junho">Junho</option>
-		<option value="julho">Julho</option>
-		<option value="agosto">Agosto</option>
-		<option value="setembro">Setembro</option>
-		<option value="outubro">Outubro</option>
-		<option value="novembro">Novembro</option>
-		<option value="Dezembro">Dezembro</option>
-
-
-	</select>
+	<input type="date" id="initDate">
+	<label value="initDate"></label>
 </form>
 	<div class="chart_1">
 		<div id='graph_dia'></div>
