--- a/pages/Grafico.html
+++ b/pages/Grafico.html
@@ -38,6 +38,8 @@ google.charts.setOnLoadCallback(draw_table);
      <div class="Botoes__pagina0">
         <form name="apaga" action="#" method="get">
             <input type="image" src = "../../imagens/blue/graph_btn.png" onClick="Dia()">
+            <input type="date" id="initDate">
+	        <label value="initDate"></label>
             <label>Dia</label>
         </form>
             <label>Mês</label>
