--- a/pages/index.html
+++ b/pages/index.html
@@ -54,8 +54,8 @@ google.charts.setOnLoadCallback(draw_table);
 </section>
 	
 <section class="chart">
-	<form action="">
-	<input type="date" id="initDate">
+	<form action="" onClick="this.form.submit()">
+	<input type="date" id="initDate" onchange="">
 	<label value="initDate"></label>
 </form>
 	<div class="chart_1">
