--- a/pages/index.html
+++ b/pages/index.html
@@ -54,12 +54,12 @@ google.charts.setOnLoadCallback(draw_table);
 </section>
 	
 <section class="chart">
-	<form action="" onClick="this.form.submit()">
-	<input type="date" id="initDate" onchange="">
-	<label value="initDate"></label>
-</form>
 	<div class="chart_1">
 		<div id='graph_dia'></div>
+		<form action="index.html" >
+			<input type="date" id="initDate" onchange=""this.form.submit()"">
+			<label value="initDate"></label>
+		</form>
 	</div>
 </section>
 
