--- a/pages/Monitor.html
+++ b/pages/Monitor.html
@@ -159,7 +159,7 @@ async function getContent() {
 						mode: 'cors',
 						cache: 'default'
 						}
-		fetch('https://repo1-iota.vercel.app/mqtt',options)
+		fetch('https://repo1-beta.vercel.app/mqtt',options)
 		//fetch('http://127.0.0.1:8081/temps')
 		.then(function (response){
 			return response.text()})
@@ -204,7 +204,7 @@ async function getContent() {
 async function cad_new_temp(){
 
 const options = {method: 'GET',	mode: 'cors',cache: 'default'}
-fetch('https://repo1-iota.vercel.app/mqtt',options)
+fetch('https://repo1-beta.vercel.app/mqtt',options)
 //fetch('http://127.0.0.1:8081/mqtt')
 .then(function (response){
 return response.text()})
@@ -226,7 +226,7 @@ const dados = {
 	}
 
 //const response = fetch('http://127.0.0.1:8081/temps',{
-const response = fetch('https://repo1-iota.vercel.app/temps',{
+const response = fetch('https://repo1-beta.vercel.app/temps',{
 method: 'POST',	mode: 'cors',
 headers: { "Content-type": 'application/json'},
 body: JSON.stringify(dados)
@@ -252,7 +252,7 @@ async function list_temp(){
 	//Obtem dados do banco de dados
 		const options = {method: 'GET',	mode: 'cors',cache: 'default'}
 		//fetch('http://127.0.0.1:8081/temps')
-		fetch('https://repo1-iota.vercel.app/temps',options)
+		fetch('https://repo1-beta.vercel.app/temps',options)
 		.then(function (response){
 			return response.text()})
 		.then(data=>{
