--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="/css/reset.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <script src="/grafico.js"></script>
-<script src="/index.js"></script>
+<script src="../api/index.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
 google.charts.load('current',{packages:['corechart']});
