--- a/pages/mqtt.html
+++ b/pages/mqtt.html
@@ -194,7 +194,7 @@ async function mqtt_show() {
 	const options = {method: 'GET',	mode: 'cors',cache: 'default'}
 	//const response =fetch(`https://server-orpin-zeta.vercel.app/mqtt`)
 	//const response =fetch(URI)
-	const response = fetch('https://repo1-iota.vercel.app/mqtt',options)
+	const response = fetch('https://repo1-beta.vercel.app/mqtt',options)
 	.then(function (response){
 	return response.text()})
 	.then(data=>{
