--- a/pages/index.html
+++ b/pages/index.html
@@ -50,6 +50,11 @@ google.charts.setOnLoadCallback(draw_table);
 	    <img src="/imagens/blue/temp_btn.png"  ALT=""></a>
 		<label>Temperature</label>
   		 </div>
+		   <div class=" w_box">
+			<a href="BotWaMe.html">
+			<img src="/imagens/blue/user.png"  ALT=""></a>
+			<label>CHATBOT</label>
+			   </div>
     </div>
 </section>
 	
