--- a/pages/index.html
+++ b/pages/index.html
@@ -4,9 +4,14 @@
 <link rel="stylesheet" type="text/css" href="/css/css.css" />
 <link rel="stylesheet" type="text/css" href="/css/reset.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" crossorigin="anonymous"></script>
+
 <script src="/grafico.js"></script>
 <script src="../api/index.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 <script>
 google.charts.load('current',{packages:['corechart']});
 google.charts.setOnLoadCallback(Dia);
