--- a/pages/index.html
+++ b/pages/index.html
@@ -67,7 +67,7 @@ google.charts.setOnLoadCallback(draw_table);
 	<div class="chart_1">
 		<div id='graph_dia'></div>
 		<form action="index.html" >
-			<input type="date" id="initDate" onchange=""this.form.submit()"">
+			<input type="date" id="initDate" onchange=""this.form.submit()">
 			<label value="initDate"></label>
 		</form>
 	</div>
