--- a/pages/index.html
+++ b/pages/index.html
@@ -75,5 +75,37 @@ google.charts.setOnLoadCallback(draw_table);
 	</div>
 </section>
 
+
+	<div id="app">
+		<h1>Whatsapp API</h1>
+		
+		<img src="" alt="QR Code" id="qrcode">
+		<h3>Logs:</h3>
+		<ul class="logs"></ul>
+	</div>
+
+	<script>
+		$(document).ready(function() {
+			var socket = io();
+
+			socket.on('message', function(msg) {
+				$('.logs').append($('<li>').text(msg));
+			});
+
+			socket.on('qr', function(src) {
+				$('#qrcode').attr('src', src);
+				$('#qrcode').show();
+			});
+
+			socket.on('ready', function(data) {
+				$('#qrcode').hide();
+			});
+
+			socket.on('authenticated', function(data) {
+				$('#qrcode').hide();
+			});
+		});
+	</script>
+
 </body>
 </html>
