--- a/pages/index.html
+++ b/pages/index.html
@@ -18,6 +18,11 @@ google.charts.setOnLoadCallback(Dia);
 google.charts.setOnLoadCallback(draw_table);
 </script>
 
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  const socket = io();
+</script>
+
 </head>
 <body> 
 <section class="Botoes">
