--- a/pages/index.html
+++ b/pages/index.html
@@ -17,7 +17,7 @@ google.charts.load('current',{packages:['corechart']});
 google.charts.setOnLoadCallback(Dia);
 google.charts.setOnLoadCallback(draw_table);
 </script>
-<script> const socket = io();</script>
+<script> const socket = io('http://localhost:3000');</script>
 
 
 </head>
