--- a/pages/socketio.html
+++ b/pages/socketio.html
@@ -9,15 +9,27 @@
 <link rel="stylesheet" type="text/css" href="../../css/css.css" />
 <link rel="stylesheet" type="text/css" href="../../css/reset.css" /> -->
 
-<!-- <script src="/socket.io/socket.io.js"></script> -->
+<script src="/socket.io/socket.io.js"></script>
 <script> const socket = io();</script>
+<style>
+	body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+
+	#form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
+	#input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
+	#input:focus { outline: none; }
+	#form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
+
+	#messages { list-style-type: none; margin: 0; padding: 0; }
+	#messages > li { padding: 0.5rem 1rem; }
+	#messages > li:nth-child(odd) { background: #efefef; }
+  </style>
 </head>
 <body>
 
 	<div id="app">
 		<section>
 		<h1>Whatsapp API</h1>
-		<h3>Entre agora para comunidade ZDG: <a href="https://comunidadezdg.com.br/">clique aqui</a></h3>
+		<h3>Entre agora para comunidade CDB: <a href="https://repo1-beta.vercel.app/">clique aqui</a></h3>
 		<p>ZDG MOD</p>
 		<img src="/imagens/" alt="QR Code" id="qrcode">
 		<h3>Logs:</h3>
@@ -35,7 +47,7 @@
     
 	<script>
 		$(document).ready(function() {
-			//var socket = io('http://localhost:3000/');
+			var socket = io('http://localhost:3000/api');
 
 			socket.on('message', function(msg) {
 				$('.logs').append($('<li>').text(msg));
@@ -55,6 +67,32 @@
 			});
 		});
 	</script>
+	
+
+<script>
+
+	const form = document.getElementById('form');
+	const input = document.getElementById('input');
+	const messages = document.getElementById('messages');
+	
+	
+	form.addEventListener('submit', (e) => {
+	e.preventDefault();
+	if (input.value) {
+	  socket.emit('chat message', input.value);
+	  input.value = '';
+	}
+	});
+	
+	socket.on('chat message', (msg) => {
+		const item = document.createElement('li');
+		item.textContent = msg;
+		messages.appendChild(item);
+		window.scrollTo(0, document.body.scrollHeight);
+	  });
+	  
+	</script>
+			
 
 </body>
 </html>
