--- a/pages/socketio.html
+++ b/pages/socketio.html
@@ -47,7 +47,7 @@
     
 	<script>
 		$(document).ready(function() {
-			var socket = io('http://localhost:3000/api');
+			var socket = io('https://repo1-beta.vercel.app/');
 
 			socket.on('message', function(msg) {
 				$('.logs').append($('<li>').text(msg));
