--- a/pages/Monitor.html
+++ b/pages/Monitor.html
@@ -199,7 +199,7 @@ async function getContent() {
 async function cad_new_temp(){
 
 const options = {method: 'GET',	mode: 'cors',cache: 'default'}
-fetch('https://repo1-beta.vercel.app/mqtt',options)
+fetch('https://repo1-beta.vercel.app/subscriber',options)
 //fetch('http://127.0.0.1:8081/mqtt')
 .then(function (response){
 return response.text()})
