--- a/pages/mqtt.html
+++ b/pages/mqtt.html
@@ -225,7 +225,7 @@ const response = fetch('https://repo1-beta.vercel.app/mqtton',{
 method: 'GET',	mode: 'cors',
 headers: { "Content-type": 'application/json'},
 //body: {"topic":'room_light',"message": '1'}
-body: JSON.stringify({"topic":'room_light',"message": '1'})
+//body: JSON.stringify({"topic":'room_light',"message": '1'})
 })
 
 .then((response) => {
