--- a/pages/mqtt.html
+++ b/pages/mqtt.html
@@ -273,7 +273,7 @@ console.log('Ocorreu um erro no servidor \n Erro: '+ err);
 
 function mqttOff(){
 
-const response = fetch('https://repo1-beta.vercel.app/mqttnode',{
+const response = fetch('https://repo1-beta.vercel.app/mqtton2',{
 method: 'POST',	mode: 'cors',
 headers: { "Content-type": 'application/json'},
 body: {"topic":'room_light',"message": '0'}
