--- a/pages/mqtt.html
+++ b/pages/mqtt.html
@@ -38,9 +38,17 @@
     <div class= "Botoes__pagina0">
 		
 <a onclick="mqttOff()" >
-		<img name="lamp_btn" src="/imagens/blue/lamp_btn.png" ALT=""></a>
+	<img name="lamp_btn" src="/imagens/blue/lamp_btn.png" ALT=""></a>
 	</a>
-		<label> Temperatura Atual </label>
+<a onclick="lampadaOff()" >
+	<img name="lamp_btn" src="/imagens/blue/lamp_btn.png" ALT=""></a>
+	</a>
+<a onclick="mqttOff()" >
+	<img name="lamp_btn" src="/imagens/blue/lamp_btn.png" ALT=""></a>
+	</a>
+<a onclick="lampadaOn()" >
+	<img name="lamp_btn" src="/imagens/blue/lamp_btn.png" ALT=""></a>
+	</a>
 	</div>
 </section>
 
